# vscode-ocaml-platform

./: .artifactignore  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .ocamlformat  .ocamlformat-ignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  .travis.yml  .vscode-test.js  .vscodeignore  .yarnrc.yml  CHANGELOG.md  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE.md  Makefile  README.md  TODO.md  azure-pipelines.yaml  biome.json  bsconfig.json  bunfig.toml  dune  dune-project  esy.json  flake.nix  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix  tsconfig.json  vscode-interop.opam  (+8 more)
src/: AzurePipelines.bs.js  AzurePipelines.ml  AzurePipelines.mli  AzurePipelines.re  CheckBucklescriptCompat.bs.js  CheckBucklescriptCompat.ml  CheckBucklescriptCompat.re  Cmd.ml  Cmd.mli  DuneFormatter.ml  DuneFormatter.mli  DuneTaskProvider.ml  DuneTaskProvider.mli  Error.re  Extension.bs.js  Extension.ml  Extension.mli  Extension.re  Extension.rei  LSP.bs.js  LSP.ml  LSP.re  Manifest.ml  Manifest.mli  Option.bs.js  Option.ml  Option.re  Output.ml  Output.mli  ProjectType.bs.js  ProjectType.re  Promise.ml  Result.bs.js  Result.ml  Result.re  Setup.bs.js  Setup.ml  Setup.mli  Setup.re  SexpFormatter.ml  (+121 more)
src-bindings/es2015/: dune  es2015.mli  es2015_collection.mli  es2015_core.mli  es2015_generator.mli  es2015_iterable.mli  es2015_promise.mli  es2015_proxy.mli  es2015_reflect.mli  es2015_symbol.mli
src-bindings/es2015/_gen/: es2015.mli  es2015_collection.mli  es2015_core.mli  es2015_generator.mli  es2015_iterable.mli  es2015_promise.mli  es2015_proxy.mli  es2015_reflect.mli  es2015_symbol.mli  es2015_symbol_wellknown.mli
src-bindings/es2016/: dune  es2016.mli  es2016_array_include.mli
src-bindings/es2016/_gen/: es2016_array_include.mli
src-bindings/es2016/_spec/: lib.es2016.array.include.d.ts
src-bindings/es2017/: dune  es2017.mli  es2017_intl.mli  es2017_object.mli  es2017_sharedmemory.mli  es2017_string.mli  es2017_typedarrays.mli
src-bindings/es2017/_gen/: es2017_intl.mli  es2017_object.mli  es2017_sharedmemory.mli  es2017_string.mli  es2017_typedarrays.mli
src-bindings/es2017/_spec/: lib.es2017.object.d.ts  lib.es2017.sharedmemory.d.ts
src-bindings/es2018/: dune  es2018.mli  es2018_asyncgenerator.mli  es2018_asynciterable.mli  es2018_intl.mli  es2018_promise.mli  es2018_regexp.mli
src-bindings/es2018/_gen/: es2018_asyncgenerator.mli  es2018_asynciterable.mli  es2018_intl.mli  es2018_promise.mli  es2018_regexp.mli
src-bindings/es2018/_spec/: lib.es2018.asyncgenerator.d.ts  lib.es2018.asynciterable.d.ts  lib.es2018.intl.d.ts
src-bindings/es2019/: dune  es2019.mli  es2019_array.mli  es2019_object.mli  es2019_string.mli  es2019_symbol.mli
src-bindings/es2019/_gen/: es2019_array.mli  es2019_object.mli  es2019_string.mli  es2019_symbol.mli
src-bindings/es2019/_spec/: lib.es2019.array.d.ts  lib.es2019.object.d.ts
src-bindings/es2020/: dune  es2020.mli  es2020_bigint.mli  es2020_intl.mli  es2020_promise.mli  es2020_sharedmemory.mli  es2020_string.mli  es2020_symbol_wellknown.mli
src-bindings/es2020/_gen/: es2020_bigint.mli  es2020_intl.mli  es2020_promise.mli  es2020_sharedmemory.mli  es2020_string.mli  es2020_symbol_wellknown.mli
src-bindings/es2020/_spec/: lib.es2020.bigint.d.ts  lib.es2020.intl.d.ts  lib.es2020.promise.d.ts  lib.es2020.sharedmemory.d.ts  lib.es2020.string.d.ts  lib.es2020.symbol.wellknown.d.ts
src-bindings/node/: dune  import.mli  node.ml  node.mli  node_assert.mli  node_async_hooks.mli  node_buffer.mli  node_child_process.mli  node_cluster.mli  node_console.mli  node_constants.mli  node_crypto.mli  node_dgram.mli  node_dns.mli  node_domain.mli  node_events.mli  node_fs.mli  node_fs_promises.mli  node_globals.mli  node_http.mli  node_http2.mli  node_https.mli  node_inspector.mli  node_module.mli  node_net.mli  node_os.mli  node_path.mli  node_perf_hooks.mli  node_process.mli  node_punycode.mli  node_querystring.mli  node_readline.mli  node_repl.mli  node_stream.mli  node_string_decoder.mli  node_stub.js  node_timers.mli  node_tls.mli  node_trace_events.mli  node_tty.mli  (+8 more)
src-bindings/node/_gen/: assert.mli  async_hooks.mli  buffer.mli  child_process.mli  cluster.mli  console.mli  constants.mli  crypto.mli  dgram.mli  dns.mli  domain.mli  events.mli  fs.mli  http.mli  (+29 more)
src-bindings/ocaml-promise/: dune  indirect_promise.js  promise.ml  promise.mli
src-bindings/vscode/: dune  stub.js  vscode.ml  vscode.mli  vscode_proposed.mli  vscode_stub.js
src-bindings/vscode-languageclient/: dune  stub.js  vscode_languageclient.mli
src-bindings/vscode-test/: dune  vscode_test.mli  vscode_test_del.mli  vscode_test_download.mli  vscode_test_request.mli  vscode_test_run_test.mli  vscode_test_util.mli
src/__tests__/: Bindings_tests.bs.js  Bindings_tests.ml  Bindings_tests.re  Setup_tests.bs.js  Setup_tests.ml  Setup_tests.re
src/bindings/: Bindings.bs.js  Bindings.ml  Bindings.re  Node.bs.js  Node.ml  Node.mli  Node.re  Rimraf.bs.js  Rimraf.ml  Rimraf.mli  Rimraf.re  Semver.ml  Semver.re  Uuid.ml  Uuid.re  Vscode.bs.js  Vscode.ml  Vscode.mli  Vscode.re  dune  fs-stub.js  interop.ml  node-stub.js  vscode__core.ml  vscode__core.mli  vscode__languageclient.ml  vscode__languageclient.mli  vscode__languageclient_require.js  vscode_stub.js
src/client/: extension.ts
src/command/: Command.bs.js  Command.re  Esy.bs.js  Esy.re  Unzip.bs.js  Unzip.re  command.ml  esy.ml  unzip.ml
src/formatters/: FormatterUtils.bs.js  FormatterUtils.re  Ocamlformat.bs.js  Ocamlformat.re  Refmt.bs.js  Refmt.re
src/ppx_tools/: dumpast.ml  dumpast.mli  dune  pp_path.ml  pp_path.mli  ppx_tools.ml  ppx_tools.mli  traverse_ast.ml  traverse_ast2.ml
src/test/: runTest.ts
test/: dune  runBsbTests.js  runEsyTests.js  runOpamTests.js  runProblemMatcherTests.js  run_esy_tests.ml  run_opam_tests.ml  run_problem_matcher_tests.ml
test/fixtures/: dune
test/sample-opam/: main.ml
test/suite/: bsb.js  bsb.test.js  esy.js  esy.test.js  opam.js  opam.test.js  problems.js  problems.test.js
(+295 files in other folders)
