(executable
 (name vscode_ocaml_platform)
 (modules :standard \ vscode_ocaml_platform_web)
 (preprocess
  (pps gen_js_api.ppx))
 (libraries
  base
  gen_js_api
  js_of_ocaml
  jsonoo
  node
  ocaml-version
  opam-file-format
  polka
  promise_jsoo
  vscode
  vscode_languageclient
  ppxlib
  ppx_tools)
 (modes js)
 (js_of_ocaml
  (flags --source-map --pretty)))

(executable
 (name vscode_ocaml_platform_web)
 (modules vscode_ocaml_platform_web)
 (modes js)
 (js_of_ocaml
  (flags --source-map --pretty)))
