(executable
 (name vscode_ocaml_platform)
 (preprocess
  (pps gen_js_api.ppx))
 (libraries
  base
  gen_js_api
  js_of_ocaml
  jsonoo
  node
  ocaml-version
  opam-file-format
  polka
  promise_jsoo
  vscode
  vscode_languageclient
  ppxlib
  ppx_tools
  interop)
 (modes js)
 (js_of_ocaml
  (javascript_files stub.js)
  (flags --source-map --pretty)))
